--- a/lmptools/tests/merge.yaml
+++ b/lmptools/tests/merge.yaml
@@ -1,9 +1,9 @@
-- filename: Fe2O3_100_down.lammps
+- filename: Fe2O3_50_down.lammps
   minormax: max
   value: -1.5
-- filename: Fe2O3_100_up.lammps
+- filename: Fe2O3_50_up.lammps
   minormax: min
   value: 80.0
-- filename: gmo.data
+- filename: uadodecane.data
   minormax: min
   value: 1.5
