Added limit and shifting functions to mdf3. Added new tests (class) for said functions. Added docstrings for same functions. Added functions to __init__ Changed merge.yaml to dict of dicts instead of list of dicts. Changed 'min' and 'max' in the settings variable to function instead of string. Some variable name changes to reflect better what they are. Commented out base_path from everywhere. Improved monkeypatch with the use of a fixture. Created functions to apply pytest.approx() to nested and double nested dictionaries.

--- a/lmptools/tests/merge.yaml
+++ b/lmptools/tests/merge.yaml
@@ -1,9 +1,9 @@
-- filename: Fe2O3_50_down.lammps
+Fe2O3_50_down.lammps:
   minormax: max
   value: -1.5
-- filename: Fe2O3_50_up.lammps
+Fe2O3_50_up.lammps:
   minormax: min
   value: 80.0
-- filename: uadodecane.data
+uadodecane.data:
   minormax: min
   value: 1.5
