--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
-requires = ["setuptools>=45"]
+requires = ["setuptools>=45", "PyYAML>=5.3.1"]
 build-backend = "setuptools.build_meta"
